--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="edu.sc.FitLivin.MainActivity">
 
     <item
@@ -8,18 +9,22 @@
         android:orderInCategory="100"
         android:title="Log out"
         />
+    <item
+        android:id="@+id/editprofile"
+        android:orderInCategory="100"
+        android:title="Edit Profile"/>
 
     <item
         android:id="@+id/uName"
         android:title=""
         android:orderInCategory="2"
-        android:showAsAction="always|withText"
+        app:showAsAction="always|withText"
         />
     <item
         android:id="@+id/home"
         android:title="home"
         android:orderInCategory="1"
         android:icon="@mipmap/ic_launcher"
-        android:showAsAction="always"
+        app:showAsAction="always"
         />
 </menu>
