--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -114,7 +114,13 @@
             android:layout_below="@+id/jumpRopeImage"
             android:textColor="#ffffff"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/jumpropeDetail"
+            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
