--- a/app/src/main/res/layout/fragment_body_building_day_five.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_five.xml
@@ -127,7 +127,13 @@
             android:textSize="20dp"
             android:textColor="#ffffff"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/shoulderPressDetail"
+            />
 
         <Button
             android:layout_width="wrap_content"
