--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -128,6 +128,13 @@
             android:layout_below="@+id/closegrippushupImage"
             android:layout_above="@+id/completeDay3bb"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/closegripPushupDetail"
+            />
 
     <Button
         android:layout_width="wrap_content"
