--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -133,6 +133,13 @@
             android:id="@+id/legPressDescrpition"
             android:textColor="#ffffff"
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/legPressDescrpition"
+            />
 
         <Button
             android:layout_width="wrap_content"
