--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -125,7 +125,13 @@
             android:id="@+id/tricepPushdownDescription"
             android:textColor="#ffffff"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/tricepPushdownDescrpition"
+            />
 
         <Button
             android:layout_width="wrap_content"
