--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -121,13 +121,19 @@
                 android:textColor="#ffffff"
                 />
 
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:id="@+id/space2"
+                android:textSize="20dp"
+                android:layout_below="@+id/inclineBenchDescription"
+                />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Workout Complete!"
                 android:id="@+id/completeDay1s"
-                android:layout_below = "@+id/inclineBenchDescription"
+                android:layout_below = "@+id/space2"
                 android:layout_gravity="right|bottom"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="false"
