--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -115,7 +115,13 @@
             android:id="@+id/shrugDescription"
             android:textColor="#ffffff"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/shrugDescription"
+            />
 
         <Button
             android:layout_width="wrap_content"
