--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -115,7 +115,13 @@
                 android:textColor="#ffffff"
                 />
 
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:id="@+id/space2"
+                android:textSize="20dp"
+                android:layout_below="@+id/calfPressDescription"
+                />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
