--- a/app/src/main/res/layout/fragment_weightloss_day_five.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_five.xml
@@ -114,6 +114,13 @@
             android:textSize="20dp"
             android:textColor="#ffffff"
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/burpiesDetail"
+            />
 
         <Button
             android:layout_width="wrap_content"
