--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -112,7 +112,13 @@
             android:layout_below = "@+id/plankImage"
             android:textColor="#ffffff"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/space2"
+            android:textSize="20dp"
+            android:layout_below="@+id/plankDetail"
+            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
