--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -105,7 +105,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current Squat (lbs):"
+            android:text="Current DeadLift (lbs):"
             android:id="@+id/deadliftText"
             android:layout_gravity="left|top"
             android:inputType="number"
