fixed edit profile

--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -21,23 +21,6 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:id="@+id/textView" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:maxLines="1"
-            android:maxLength="10"
-            android:inputType="textPersonName"
-            android:id="@+id/editTextname"
-            android:textSize="25dp"
-            android:textColor="#ffffff"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:hint="Enter new name"
-            android:textColorHint="#ffffff"
-            android:background="#010101"
-            android:layout_above="@+id/reditpassword"
-            />
 
 
         <EditText
@@ -52,10 +35,12 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
+            android:layout_marginTop="50dp"
             android:hint="Enter new password"
             android:textColorHint="#ffffff"
             android:background="#010101"
-            android:layout_above="@+id/editpasstext"
+            android:layout_below="@+id/textView"
+
             />
 
         <EditText
@@ -74,7 +59,7 @@
             android:textColorHint="#ffffff"
             android:background="#010101"
             android:id="@+id/editpasstext"
-            android:layout_centerVertical="true"
+            android:layout_below="@+id/reditpassword"
             />
 
         <EditText
@@ -97,8 +82,8 @@
             />
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="#010101"
             android:id="@+id/savebuttoneditprofile"
             android:src="@drawable/ic_launcher"
@@ -108,15 +93,15 @@
             android:layout_alignEnd="@+id/editphone"
             android:clickable="true"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="#010101"
             android:id="@+id/exiteditprofile"
             android:src="@drawable/ic_launcher2"
             android:layout_gravity="left|bottom"
-            android:layout_alignTop="@+id/savebuttoneditprofile"
-            android:layout_alignStart="@+id/editphone"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:layout_alignBottom="@+id/savebuttoneditprofile"
+            android:layout_alignStart="@+id/editphone" />
 
 
 
