--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -14,10 +14,10 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="EDIT PROFILE"
+            android:text="Change Password"
             android:textColor="#ffffff"
             android:layout_marginTop="50dp"
-            android:textSize="50dp"
+            android:textSize="39dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:id="@+id/textView" />
@@ -62,25 +62,6 @@
             android:layout_below="@+id/reditpassword"
             />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:ems="10"
-            android:maxLines="1"
-            android:maxLength="10"
-            android:hint="Enter your phone"
-            android:textSize="25dp"
-            android:textColor="#ffffff"
-            android:inputType="phone"
-            android:textColorHint="#ffffff"
-            android:background="#010101"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:id="@+id/editphone"
-            android:layout_below="@+id/editpasstext"
-            />
-
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -88,10 +69,10 @@
             android:id="@+id/savebuttoneditprofile"
             android:src="@drawable/ic_launcher"
             android:layout_gravity="left|bottom"
-            android:layout_marginBottom="54dp"
+            android:layout_marginBottom="58dp"
+            android:clickable="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignEnd="@+id/editphone"
-            android:clickable="true"/>
+            android:layout_alignStart="@+id/editpasstext" />
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -100,8 +81,8 @@
             android:src="@drawable/ic_launcher2"
             android:layout_gravity="left|bottom"
             android:clickable="true"
-            android:layout_alignBottom="@+id/savebuttoneditprofile"
-            android:layout_alignStart="@+id/editphone" />
+            android:layout_alignTop="@+id/savebuttoneditprofile"
+            android:layout_alignEnd="@+id/editpasstext" />
 
 
 
