--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/editprofile"
         android:orderInCategory="100"
-        android:title="Edit Profile"/>
+        android:title="Change Password"/>
 
     <item
         android:id="@+id/uName"
