--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -23,10 +23,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Hammer Curl"
         android:id="@+id/hammercurlText"
-        android:layout_above="@+id/hammerCurlImage"
         android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        android:layout_above="@+id/hammerCurlImage"
+        />
 
 
         <ImageButton
@@ -36,9 +37,9 @@
             android:id="@+id/hammerCurlImage"
             android:src="@drawable/hammercurl"
             android:clickable="true"
+            android:layout_gravity="center_horizontal"
             android:layout_below="@+id/hammercurlText"
             android:layout_above="@+id/hammerCurlDetail"
-            android:layout_gravity="center_horizontal"
             />
 
         <TextView
@@ -46,11 +47,12 @@
             android:layout_height="wrap_content"
             android:text="4 Sets of 10-12 Repetitions"
             android:id="@+id/hammerCurlDetail"
-            android:layout_below="@+id/hammerCurlImage"
-            android:layout_above="@+id/preacherCurlText"
             android:textSize="20dp"
             android:layout_gravity="center_horizontal"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:layout_below="@+id/hammerCurlImage"
+            android:layout_above="@+id/preacherCurlText"
+            />
 
 
 
@@ -64,7 +66,7 @@
         android:textSize="25dp"
         android:layout_below="@+id/hammerCurlDetail"
         android:layout_above="@+id/preacherCurlImage"
-            />
+        />
 
 
 
@@ -103,7 +105,8 @@
         android:textColor="#ffffff"
         android:textSize="25dp"
         android:layout_below="@+id/preacherCurlDetail"
-        android:layout_above="@+id/closegrippushupImage"/>
+        android:layout_above="@+id/closegrippushupImage"
+        />
 
     <ImageButton
         android:scaleType="fitXY"
@@ -126,7 +129,8 @@
             android:textSize="20dp"
             android:textColor="#ffffff"
             android:layout_below="@+id/closegrippushupImage"
-            android:layout_above="@+id/completeDay3bb"/>
+            android:layout_above="@+id/completeDay3bb"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -141,10 +145,10 @@
         android:layout_height="wrap_content"
         android:text="Workout Complete!"
         android:id="@+id/completeDay3bb"
-        android:layout_below = "@+id/closegripPushupDetail"
         android:layout_gravity="right|bottom"
         android:background="#e70b0e"
         android:textColor="#ffffff"
+        android:layout_below = "@+id/closegripPushupDetail"
         />
 
     </LinearLayout>>
