--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,5 +2,7 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
     </style>
+    <style name="AppDialog" parent="android:Theme.Material.Dialog.Alert">
+    </style>
 </resources>
 
